test/expressions/noinit/recordHasTypeField.good
recordHasTypeField.chpl:12: error: noinit is only supported for arrays
